Separated DineIn and DeliveryOrder classes to allow for easier extension of order types in future